--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ DB_NAME = "Quiz_Maker_Application"
 SALT = 10
 JWT_SECRET = "QWERTYUIOqwertyuiop0987654321qwertyuiop"
 JWT_EXPIRY = "200h"
-EMAIL_USER = "shakthisundar7@gmail.com"
+EMAIL_USER = "vikramk2161@gmail.com"
 EMAIL_PASS = "lyro vjmc duiz qhne"
 NODE_ENV=development
 
