--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 8000
-# DB_URL = "mongodb+srv://shakthisundar7:shakthi1706@quizcluster0.rctaf.mongodb.net"
+DB_URL = "mongodb+srv://vikramk2161_db_user:Vikram2161@quizmaster21.lfpwepo.mongodb.net/?appName=QUIZMASTER21"
 DB_NAME = "Quiz_Maker_Application"
 SALT = 10
 JWT_SECRET = "QWERTYUIOqwertyuiop0987654321qwertyuiop"
@@ -8,4 +8,4 @@ EMAIL_USER = "vikramk2161@gmail.com"
 EMAIL_PASS = "lyro vjmc duiz qhne"
 NODE_ENV=development
 
-DB_URL=mongodb://localhost:27017/quizmasterdb
+#DB_URL=mongodb://localhost:27017/quizmasterdb
