--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 8000
-DB_URL = "mongodb+srv://vikramk2161_db_user:Vikram2161@quizmaster21.lfpwepo.mongodb.net/?appName=QUIZMASTER21"
+DB_URL = "mongodb+srv://vikramk2161_db_user:quizmaster@cluster0.bzltyji.mongodb.net/?appName=Cluster0"
 DB_NAME = "Quiz_Maker_Application"
 SALT = 10
 JWT_SECRET = "QWERTYUIOqwertyuiop0987654321qwertyuiop"
