--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 PORT = 8000
-# DB_URL = "mongodb+srv://shakthisundar7:shakthi1706@quizcluster0.rctaf.mongodb.net"
+DB_URL = "mongodb+srv://vikramk2161_db_user:quizmaster@cluster0.bzltyji.mongodb.net/?appName=Cluster0"
 DB_NAME = "Quiz_Maker_Application"
 SALT = 10
 JWT_SECRET = "QWERTYUIOqwertyuiop0987654321qwertyuiop"
 JWT_EXPIRY = "200h"
-EMAIL_USER = "shakthisundar7@gmail.com"
+EMAIL_USER = "vikramk2161@gmail.com"
 EMAIL_PASS = "lyro vjmc duiz qhne"
 NODE_ENV=development
 
-DB_URL=mongodb://localhost:27017/quizmasterdb
+#DB_URL=mongodb://localhost:27017/quizmaster
